--- a/style.css
+++ b/style.css
@@ -44,10 +44,10 @@
 }
 
 .green-lotto-link {
-  color: #fff;
+  color: #008000;
   text-decoration: none;
   text-align: center;
-  background-color: green;
+  background-color: #fff;
   padding: 8px;
   border-radius: 6px;
   box-shadow: 2px 0 2px 0 rgb(146, 146, 146);
